# aspect_js_oci_help

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
core/data/api/frontend/: BUILD  index.html  package-lock.json  package.json
core/data/api/frontend/src/: App.jsx  BUILD
core/data/api/frontend/src/components/: AliasesList.jsx  RDRDetails.jsx  RDRList.jsx  RootInstructions.jsx  SetsList.jsx
