module(
    name = "dirt",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

bazel_dep(name = "aspect_rules_js", version = "2.3.8")

bazel_dep(name = "rules_nodejs", version = "6.3.5")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.5.1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

bazel_dep(name = "rules_oci", version = "2.0.0-beta1")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
use_repo(oci, "debian_slim", "debian_slim_linux_amd64", "debian_slim_linux_arm64_v8")
